<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_photo_share"
        android:icon="@drawable/ic_camera_alt_white_24dp"
        android:orderInCategory="70"
        android:title="@string/photo_share"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_take_photo"
                android:icon="@drawable/ic_camera_alt_cyan_24dp"
                android:title="開啟相機"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_pick_photo"
                android:icon="@drawable/ic_image_cyan_24dp"
                android:title="選擇照片"
                app:showAsAction="never" />
        </menu>
    </item>

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="90"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_legacy_mode"
        android:orderInCategory="95"
        android:title="@string/legacy_mode"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_reorder"
        android:icon="@drawable/ic_swap_vert_white_24dp"
        android:orderInCategory="100"
        android:title="排序"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_change_widger_bgcolor"
        android:orderInCategory="100"
        android:title="@string/action_change_widget_bgcolor"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_changelog"
        android:orderInCategory="100"
        android:title="@string/action_changelog"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>