<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.kihon.android.apps.army_logout="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        com.kihon.android.apps.army_logout:showAsAction="ifRoom|withText">
        <menu>
            <group>
                <item
                    android:id="@+id/share_photo"
                    android:orderInCategory="100"
                    com.kihon.android.apps.army_logout:showAsAction="ifRoom|withText"
                    android:title="照片"/>
                <item
                    android:id="@+id/share_board"
                    android:orderInCategory="100"
                    com.kihon.android.apps.army_logout:showAsAction="ifRoom|withText"
                    android:title="計時看板截圖"/>
                <item
                    android:id="@+id/share_facebook"
                    android:orderInCategory="100"
                    com.kihon.android.apps.army_logout:showAsAction="ifRoom|withText"
                    android:title="Facebook動態"/>
                <!--
            <item
                android:id="@+id/share_facebook_request"
                android:title="邀請朋友"/>
                -->
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_change_widger_bgcolor"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_change_widget_bgcolor">
    </item>
    <item
        android:id="@+id/action_changelog"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_changelog">
    </item>

    <!--
    <item
        android:id="@+id/action_connect_fb"
        android:orderInCategory="120"
        android:showAsAction=""
        android:checkable="true"
        android:title="@string/connect_fb">
    </item>
    -->
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about">
    </item>

</menu>