<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/welcome_user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>

            <requestFocus />

            <TextView
                android:id="@+id/welcome_user_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="役期資訊"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <include layout="@layout/util_horizontal_line_section" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingRight="5dp"
                        android:text="@string/login_date"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Button
                        android:id="@+id/login_date_btn"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="2020年12月31日"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_howlong"

                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <com.kihon.android.apps.army_logout.NDSpinner
                    android:id="@+id/service_day_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/login_delete_day"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/delete_day_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:gravity="center"
                    android:text="30天"
                    android:textSize="18sp" />

                <!--<EditText
                    android:id="@+id/delete_day_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:digits="1234567890"
                    android:ems="8"
                    android:inputType="number"
                    android:maxLength="2"
                    android:selectAllOnFocus="true"
                    android:text="30" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="天"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
    -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="計時看板"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <include layout="@layout/util_horizontal_line_section" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout_information"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:gravity="top"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:shadowColor="#f5f5f5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="退伍日期"
                        android:textSize="@dimen/com_facebook_loginview_text_size" />

                    <TextView
                        android:id="@+id/logout_date_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/com_facebook_blue" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nokori_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/until_logout_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="距離退伍還剩下"
                        android:textSize="@dimen/com_facebook_loginview_text_size" />

                    <TextView
                        android:id="@+id/until_logout_days_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/com_facebook_blue" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/break_month_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="距離破月還有!!"
                        android:textSize="@dimen/com_facebook_loginview_text_size" />

                    <TextView
                        android:id="@+id/break_month_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/com_facebook_blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="退伍令下載進度"
                        android:textSize="@dimen/com_facebook_loginview_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <ProgressBar
                            android:id="@+id/login_progressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="24dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            tools:progress="30" />

                        <TextView
                            android:id="@+id/login_percent"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:textSize="@dimen/com_facebook_loginview_text_size"
                            android:textColor="@color/com_facebook_blue"
                            tools:text="00.00%" />
                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>

