<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:CircleProgressView="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <at.grabner.circleprogress.CircleProgressView
                android:id="@+id/circleView"
                android:visibility="gone"
                android:layout_width="80dp"
                android:layout_height="80dp"
                CircleProgressView:cpv_autoTextSize="true"
                CircleProgressView:cpv_barColor="@color/colorPrimary"
                CircleProgressView:cpv_barWidth="6dp"
                CircleProgressView:cpv_contourSize="0dp"
                CircleProgressView:cpv_maxValue="100"
                CircleProgressView:cpv_rimColor="@color/primary_light"
                CircleProgressView:cpv_rimWidth="6dp"
                CircleProgressView:cpv_seekMode="false"
                CircleProgressView:cpv_showUnit="true"
                CircleProgressView:cpv_spinColor="@color/colorPrimary"
                CircleProgressView:cpv_textColor="@color/colorPrimaryDark"
                CircleProgressView:cpv_textScale="1"
                CircleProgressView:cpv_unit="%"
                CircleProgressView:cpv_unitColor="@color/primary_light"
                CircleProgressView:cpv_unitPosition="right_top"
                CircleProgressView:cpv_unitScale="1"
                CircleProgressView:cpv_value="10" />

            <com.github.OrangeGangsters.circularbarpager.library.CircularBarPager
                android:id="@+id/circularBarPager"
                android:layout_height="250dp"
                android:layout_width="match_parent"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                style="@style/CircularBarPagerStyle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ProgressBar
                    android:id="@+id/progressBar_connect_facebook"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:id="@+id/welcome_user_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>


            <requestFocus />

            <TextView
                android:id="@+id/welcome_user_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/login_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="役期資訊"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <include layout="@layout/util_horizontal_line_section" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/login_date"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <Button
                        android:id="@+id/login_date_btn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="showDatePickerDialog"
                        android:text="2020年12月31日" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_howlong"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/service_day_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.1" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/login_delete_day"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Button
                    android:id="@+id/delete_day_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:text="30天" />

                <!--<EditText
                    android:id="@+id/delete_day_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.8"
                    android:digits="1234567890"
                    android:ems="8"
                    android:inputType="number"
                    android:maxLength="2"
                    android:selectAllOnFocus="true"
                    android:text="30" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="天"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
-->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="計時看板"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <include layout="@layout/util_horizontal_line_section" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/logout_information"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@color/md_green_50"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:shadowColor="#f5f5f5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="退伍日期"
                        android:textSize="@dimen/com_facebook_loginview_text_size" />

                    <TextView
                        android:id="@+id/logout_date_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nokori_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/until_logout_title_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="距離退伍還剩下"
                        android:textSize="@dimen/com_facebook_loginview_text_size" />

                    <TextView
                        android:id="@+id/until_logout_days_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/break_month_block"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="距離破月還有!!"
                        android:textSize="@dimen/com_facebook_loginview_text_size" />

                    <TextView
                        android:id="@+id/braak_month_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Medium Text"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="退伍令下載進度"
                        android:textSize="@dimen/com_facebook_loginview_text_size" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ProgressBar
                            android:id="@+id/login_progressBar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1" />

                        <TextView
                            android:id="@+id/login_Percent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="%"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:textColor="@color/com_facebook_blue" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>